[package]
name = "oplog"
version = "0.4.0"
authors = ["Paul Mucur <mudge@mudge.name>"]
description = "Library for iterating over a MongoDB replica set oplog."
documentation = "http://mudge.name/oplog"
repository = "https://github.com/mudge/oplog"
readme = "README.md"
keywords = ["mongodb", "mongo", "oplog"]
license = "MIT"
edition = "2021"

[dependencies]
mongodb = "2"
futures = "0.3"


[[bin]]
name = "printer"
path = "examples/printer.rs"