[package]
name = "oplog"
version = "0.4.0"
authors = ["Paul Mucur <mudge@mudge.name>"]
description = "Library for iterating over a MongoDB replica set oplog."
documentation = "http://mudge.name/oplog"
repository = "https://github.com/mudge/oplog"
readme = "README.md"
keywords = ["mongodb", "mongo", "oplog"]
license = "MIT"
edition = "2021"

[dependencies]
mongodb = "2"
futures = "0.3"
tokio = {version = "1",futures=["full"]}
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }

log="0.4"
env_logger = "0.9.0"


[[bin]]
name = "printer"
path = "examples/printer.rs"